name:                semver-range
version:             0.0.1.0
synopsis:            Implementation of semver ranges as in https://github.com/npm/node-semver
description:         Write me!
homepage:            https://github.com/phadej/semver-range
license:             BSD3
license-file:        LICENSE
author:              Oleg Grenrus <oleg.grenrus@iki.fi>
maintainer:          Oleg Grenrus <oleg.grenrus@iki.fi>
copyright:           (c) 2015 Oleg Grenrus
category:            Data
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:     Data.SemVer.Range
  other-extensions:    DeriveDataTypeable, DeriveFunctor, DeriveFoldable, DeriveTraversable, DeriveGeneric, OverloadedStrings
  build-depends:       base              >=4.6 && <4.9,
                       deepseq           >=1.1 && <1.5,
                       hashable          >=1.2 && <1.3,
                       regex-applicative >=0.3 && <0.4,
                       transformers      >=0.3 && <0.5
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Tests.hs
  build-depends:       base,
                       semver-range,
                       tasty,
                       tasty-quickcheck,
                       text
  default-language:    Haskell2010
  ghc-options:         -Wall
